Fixed some styling leak issues in AboutUs.scss for collapse header

--- a/client/src/components/AboutUs/AboutUs.scss
+++ b/client/src/components/AboutUs/AboutUs.scss
@@ -345,7 +345,7 @@
   font-size: 1rem;
 }
 
-.custom-collapse .ant-collapse-header-text {
+.about-us-collapse .ant-collapse-header-text {
   color: white;
   font-family: 'DT Black';
   text-align: left;
@@ -379,7 +379,7 @@
   order: 2;
 }
 
-.ant-collapse {
+.about-us-collapse {
   background-color: #20242c;
   place-self: center;
 
